Add gradle run configuration, fix issues with jfoenix library